--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Jonas <parnow@fh-potsdam.de>",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "PORT=3033 nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
