--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "nuxt": "^1.4.2",
-    "v-tooltip": "^2.0.0-rc.33"
+    "v-tooltip": "^2.0.0-rc.33",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
@@ -28,7 +29,7 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.11.0",
     "normalize-scss": "^7.0.1",
     "sass-loader": "^7.1.0"
   }
