--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "d3-array": "^2.0.3",
+    "d3-format": "^1.3.2",
+    "d3-scale": "^3.0.0",
     "lodash": "^4.17.11",
     "nuxt": "^1.4.2",
     "v-tooltip": "^2.0.0-rc.33",
@@ -29,7 +32,7 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "normalize-scss": "^7.0.1",
     "sass-loader": "^7.1.0"
   }
