--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "d3-array": "^2.0.3",
     "d3-format": "^1.3.2",
     "d3-scale": "^3.0.0",
     "lodash": "^4.17.11",
     "nuxt": "^1.4.2",
     "v-tooltip": "^2.0.0-rc.33",
+    "vue-drag-resize": "^1.3.2",
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
