--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "d3-scale": "^3.0.0",
     "lodash": "^4.17.11",
     "nuxt": "^1.4.2",
+    "timeago.js": "^4.0.0-beta.2",
     "v-tooltip": "^2.0.0-rc.33",
     "vue-drag-resize": "^1.3.2",
     "vuex-persistedstate": "^2.5.4"
