--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "d3-array": "^2.0.3",
     "d3-format": "^1.3.2",
     "d3-scale": "^3.0.0",
-    "lodash": "^4.17.11",
-    "nuxt": "^1.4.2",
+    "lodash": "^4.17.15",
+    "nuxt": "^2.8.1",
     "timeago.js": "^4.0.0-beta.2",
-    "v-tooltip": "^2.0.0-rc.33",
+    "v-tooltip": "^2.0.2",
     "vue-drag-resize": "^1.3.2",
     "vuex-persistedstate": "^2.5.4"
   },
