--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "copy-to-clipboard": "^3.2.1",
     "d3-array": "^2.0.3",
     "d3-format": "^1.3.2",
     "d3-scale": "^3.0.0",
