--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "scenario-finder",
+  "name": "finder",
   "version": "1.0.0",
-  "description": "Scenario Finder",
+  "description": "Finder for Scenario and Co-Production Finder",
   "author": "Jonas <parnow@fh-potsdam.de>",
   "private": true,
   "scripts": {
@@ -15,11 +15,12 @@
   "dependencies": {
     "axios": "^0.19.0",
     "copy-to-clipboard": "^3.2.1",
+    "crossfilter2": "^1.5.2",
     "d3-array": "^2.0.3",
     "d3-format": "^1.3.2",
     "d3-scale": "^3.0.0",
     "lodash": "^4.17.15",
-    "nuxt": "^2.8.1",
+    "nuxt": "^2.12.0",
     "timeago.js": "^4.0.0-beta.2",
     "v-tooltip": "^2.0.2",
     "vue-drag-resize": "^1.3.2",
@@ -35,7 +36,7 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.1",
     "normalize-scss": "^7.0.1",
     "sass-loader": "^7.1.0"
   }
