--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "axios": "^0.19.0",
     "copy-to-clipboard": "^3.2.1",
     "crossfilter2": "^1.5.2",
-    "d3-array": "^2.0.3",
-    "d3-format": "^1.3.2",
-    "d3-scale": "^3.0.0",
+    "d3-array": "^2.4.0",
+    "d3-format": "^1.4.3",
+    "d3-scale": "^3.2.1",
+    "library": "github:SensesProject/library",
     "lodash": "^4.17.15",
-    "nuxt": "^2.12.0",
-    "timeago.js": "^4.0.0-beta.2",
-    "v-tooltip": "^2.0.2",
+    "nuxt": "^2.12.2",
+    "timeago.js": "^4.0.2",
+    "v-tooltip": "^2.0.3",
     "vue-drag-resize": "^1.3.2",
+    "vue-draggable-resizable": "^2.1.0",
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
