Update source to static files

--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "axios": "^0.21.0",
+    "axios": "^0.21.4",
     "copy-to-clipboard": "^3.3.1",
     "crossfilter2": "^1.5.4",
+    "csvtojson": "^2.0.10",
     "d3-array": "^2.9.0",
     "d3-format": "^2.0.0",
     "d3-scale": "^3.2.3",
     "export-to-csv": "^0.2.1",
     "js-levenshtein": "^1.1.6",
     "library": "github:SensesProject/library",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "nuxt": "^2.14.10",
     "timeago.js": "^4.0.2",
     "v-tooltip": "^2.0.3",
