--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
     "dev": "PORT=3033 nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "generate": "nuxt generate"
   },
   "dependencies": {
-    "axios": "^0.21.4",
+    "axios": "^0.26.0",
     "copy-to-clipboard": "^3.3.1",
+    "core-js": "^3.19.3",
     "crossfilter2": "^1.5.4",
     "csvtojson": "^2.0.10",
     "d3-array": "^2.9.0",
@@ -22,25 +21,18 @@
     "js-levenshtein": "^1.1.6",
     "library": "github:SensesProject/library",
     "lodash": "^4.17.21",
-    "nuxt": "^2.14.10",
+    "nuxt": "^2.15.8",
     "timeago.js": "^4.0.2",
-    "v-tooltip": "^2.0.3",
-    "vue-drag-resize": "^1.4.2",
-    "vue-draggable-resizable": "^2.2.0",
+    "v-tooltip": "^2.1.3",
+    "vue": "^2.6.14",
+    "vue-draggable-resizable": "^2.3.0",
+    "vue-server-renderer": "^2.6.14",
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.15.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-html": "^6.1.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^5.0.0",
-    "node-sass": "^5.0.0",
     "normalize-scss": "^7.0.1",
-    "sass-loader": "^10.1.0"
+    "sass": "^1.49.8",
+    "sass-loader": "^10.2.1",
+    "webpack": "^4.46.0"
   }
 }
